crates/ruff_python_formatter/tests/snapshots/black_compatibility@cases__single_line_format_skip_with_multiple_comments.py.snap
---
source: crates/ruff_python_formatter/tests/fixtures.rs
---
## Input

```python
foo =  123  # fmt: skip # noqa: E501 # pylint
bar =    (
    123   ,
    (        1      +           5      )  # pylint # fmt:skip
)
baz = "a"    +   "b"  # pylint; fmt: skip; noqa: E501
skip_will_not_work =  "a" +  "b"  # pylint fmt:skip
skip_will_not_work2 =  "a" +  "b"  # some text; fmt:skip happens to be part of it
```

## Black Differences

```diff
--- Black
+++ Ruff
@@ -1,8 +1,8 @@
 foo =  123  # fmt: skip # noqa: E501 # pylint
 bar = (
-    123   ,
-    (        1      +           5      )  # pylint # fmt:skip
+    123,
+    (1 + 5),  # pylint # fmt:skip
 )
-baz = "a"    +   "b"  # pylint; fmt: skip; noqa: E501
+baz = "a" + "b"  # pylint; fmt: skip; noqa: E501
 skip_will_not_work = "a" + "b"  # pylint fmt:skip
 skip_will_not_work2 = "a" + "b"  # some text; fmt:skip happens to be part of it
```

## Ruff Output

```python
foo =  123  # fmt: skip # noqa: E501 # pylint
bar = (
    123,
    (1 + 5),  # pylint # fmt:skip
)
baz = "a" + "b"  # pylint; fmt: skip; noqa: E501
skip_will_not_work = "a" + "b"  # pylint fmt:skip
skip_will_not_work2 = "a" + "b"  # some text; fmt:skip happens to be part of it
```

## Black Output

```python
foo =  123  # fmt: skip # noqa: E501 # pylint
bar = (
    123   ,
    (        1      +           5      )  # pylint # fmt:skip
)
baz = "a"    +   "b"  # pylint; fmt: skip; noqa: E501
skip_will_not_work = "a" + "b"  # pylint fmt:skip
skip_will_not_work2 = "a" + "b"  # some text; fmt:skip happens to be part of it
```
